Changes to styling and layout of the page. Added sections for various div classes and aligned boxes appropriately.

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     list-style: none;
-    outline: solid 1px red;
+  /*  outline: solid 1px red; */
 }
 
 body {
@@ -14,8 +14,7 @@ body {
 }
 
 img {
-    max-width: max-content 100%;
-
+    width: 100%;
 }
 
 h1 {
@@ -28,8 +27,16 @@ h1 {
 
 }
 
+.Name h1 {
+    padding: 5px 10px 5px 30px;
+}
+
 navbar h1 {
     background-color: aqua;
+}
+
+.header {
+    position: relative;
 }
 
 header h2 {
@@ -44,8 +51,9 @@ header h2 {
     font-size: 15px;
     align-items: flex-end;
     justify-content: right;
-    margin-top: -5%;
-    
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
 }
 
 .navbar  {
@@ -72,13 +80,14 @@ a {
 
 .sidebar {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     height: 100%;
-    margin-top: 30px;
-    /* width: 200px; */
-    align-items: center;
+    padding: 20px 0;
     
-    /* padding-top: 40px; */
+}
+
+.sidebar p {
+    margin-bottom: 20px;
 }
 
 /* .side-container {
@@ -92,12 +101,22 @@ a {
 /* About Me*/
 .sidebar1 {
     border-right: 2px black solid;
-    height: 50px;
+    margin-right: 30px;
+    width: 20%;
+}
 
+.sidebar1-desc {
+    width: 60%;
 }
 
 .sidebar1 h2 {
-    margin-top: 10px;
+    font-size: 40px;
+    text-align: right;
+    padding-right: 10px;
+}
+
+.sidebar1 h2 span{
+    display: block;
 }
 
 .sidebar2 {
@@ -111,7 +130,7 @@ a {
 
 .banner-text h2 {
     display: flex;
-    
+    padding: 5px;
     color: rgb(54, 50, 50);
 }
 
@@ -122,39 +141,68 @@ p {
     
 }
 
-.box {
-    right: 150px;
-    margin-left: 135%;
-    font-size: 18px;
-    box-sizing: content-box;
-    align-content: center;
-    justify-content: top;
-    width: 100%;
-    padding-top: 100px;
-    
-}
-.box1 img {
-    width: 750px;
-    height: 350px;
-    margin-left: 600px;
-    
-
-}
-
-footer {
-    font-size: 18px;
+.projects-gallery {
     display: flex;
-    margin-left: 400px;
     flex-wrap: wrap;
-    justify-content: space-between 0;
-    align-content: center;
+}
 
+.project {
+    width: calc(100% / 2  - 22px);
+    padding: 0;
+    position: relative;
+    border: 1px solid green;
+    margin: 0 10px 20px;
 }
 
 
+.project-desc {
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    background-color: aquamarine;
+    padding: 10px;
+}
+
+.project-desc h2{
+    margin-bottom: 5px;
+}
+
+.project.w-100 {
+    width: 100%;
+}
+
+.project .img-wrapper {
+    position: relative;
+    overflow: hidden;
+    height: 200px;
+    border: 3px solid green;
+}
+
+.project.w-100 .img-wrapper {
+    height: 300px;
+}
+
+.project .img-wrapper img{
+    height: 100%;
+    opacity: 0.9;
+}
+
+.project .img-wrapper img:hover{
+    opacity: 1;
+}
 
 
+.contact-links {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
 
+.contact-links a {
+    color: #222;
+    font-size: 16px;
+}
 
 
 
