--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,13 @@
     margin: 0;
     padding: 0;
     list-style: none;
-  /*  outline: solid 1px red; */
+   
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
-    color: #1a139e;
+    color: rgb 54, 50, 50;
     background-color: fff;
 }
 
@@ -100,7 +100,7 @@ a {
 
 /* About Me*/
 .sidebar1 {
-    border-right: 2px black solid;
+    border-right: 3px black solid;
     margin-right: 30px;
     width: 20%;
 }
@@ -150,7 +150,7 @@ p {
     width: calc(100% / 2  - 22px);
     padding: 0;
     position: relative;
-    border: 1px solid green;
+    border: 1px solid aqua;
     margin: 0 10px 20px;
 }
 
@@ -159,7 +159,7 @@ p {
     position: absolute;
     bottom: 20px;
     left: 0;
-    background-color: aquamarine;
+    background-color: aqua;
     padding: 10px;
 }
 
@@ -175,7 +175,7 @@ p {
     position: relative;
     overflow: hidden;
     height: 200px;
-    border: 3px solid green;
+    border: 5px solid aqua;
 }
 
 .project.w-100 .img-wrapper {
